Started on math logic

--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
     <title>Julia Set Visualisation</title>
 </head>
 <body>
+<h1>Julia Set Visualisation</h1>
 <canvas id="JuliaCanvas" width="803" height="400" style="border:1px solid #000000;"></canvas>
 </body>
 </html>
