Moved canvas into JavaScript file Imported JavaScript file into HTML

--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h1>Julia Set Visualisation</h1>
-<canvas id="JuliaCanvas" width="803" height="400" style="border:1px solid #000000;"></canvas>
+<script src="Julia.js"></script>
 </body>
 </html>
