Added CSS stylesheet

--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Julia Set Visualisation</title>
+    <link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body>
 <h1>Julia Set Visualisation</h1>
