--- a/Index.html
+++ b/Index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <title>Julia Set Visualisation</title>
     <link rel="stylesheet" type="text/css" href="Style.css">
+    <script src="p5/p5.js"></script>
+    <script src="Julia.js"></script>
+    <script src="Test.js"></script>
 </head>
 <body>
     <h1>Julia Set Visualisation</h1>
-    <script src="Julia.js"></script>
     <p>The Julia Set can be used to show beautiful fractal patterns if used correctly.</p>
     <p>
         Essentially what is happening is thatthe canvas represents the complex plane and for each pixel on the canvas,
