--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <script src="p5/p5.js"></script>
     <script src="p5/addons/p5.dom.js"></script>
     <script src="Julia.js"></script>
-    <script src="Test.js"></script>
+    <!--<script src="Test.js"></script>-->
 </head>
 <body>
     <h1>Julia Set Visualisation</h1>
