Can't change colorMode to HSB

--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,6 @@
     <script src="p5/p5.js"></script>
     <script src="p5/addons/p5.dom.js"></script>
     <script src="Julia.js"></script>
-    <!--<script src="Test.js"></script>-->
 </head>
 <body>
     <h1>Julia Set Visualisation</h1>
@@ -17,6 +16,12 @@
         the location is iterated using the equation f(z) = z<sup>2</sup> + c for some constant c.
         This is iterated until the result lies outside a circle of radius 2 centered at the origin. For
         each pixel, the number of iterations taken is found and the pixel colour is changed accordingly.
+    </p>
+    <p>
+        The constant, c, can be changed by moving the mouse across the screen. The y axis represents the imaginary part
+        and the x axis represents the real part of the complex number. Notice how all Julia sets that are entirely real
+        are symmetrical. Both the real and imaginary components can be varied between 1 and -1. The most interesting
+        features occur with the mouse on the left side of the screen however experiment and see what you can find!
     </p>
 </body>
 </html>
