Implemented simple colour mode functionality

--- a/Index.html
+++ b/Index.html
@@ -23,6 +23,13 @@
         are symmetrical. Both the real and imaginary components can be varied between 1 and -1. The most interesting
         features occur with the mouse on the left side of the screen however experiment and see what you can find!
     </p>
+    <p>
+        The Mandelbrot set is very similar to the Julia set however instead of changing z and using a constant c, z is
+        held at the origin and the value of c is changed to find which values diverge and which are bounded.
+    </p>
+    <p>
+        NOTE: Performance is significantly improved in simple colour mode so the mouse movement is much smoother
+    </p>
 </body>
 </html>
 
