Added iterations slider

--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,8 @@
         held at the origin and the value of c is changed to find which values diverge and which are bounded.
     </p>
     <p>
-        NOTE: Performance is significantly improved in simple colour mode so the mouse movement is much smoother
+        NOTE: Performance is significantly improved in simple colour mode so the mouse movement is much smoother. The
+        slider can be used to vary the number of iterations. A lower values gives better performance but lower resolution.
     </p>
 </body>
 </html>
